# docs/swagger.json
@@ -77,7 +77,7 @@
         }
     },
     "definitions": {
-        "api.Metadata": {
+        "api.Payload": {
             "type": "object",
             "additionalProperties": true
         },
@@ -99,8 +99,8 @@
                 "current_status": {
                     "$ref": "#/definitions/api.ProcessStatusDTO"
                 },
-                "metadata": {
-                    "$ref": "#/definitions/api.Metadata"
+                "payload": {
+                    "$ref": "#/definitions/api.Payload"
                 },
                 "statuses": {
                     "type": "array",
@@ -121,12 +121,12 @@
                     "type": "string",
                     "example": "2023-12-08T11:33:55.418484002-06:00"
                 },
-                "metadata": {
-                    "$ref": "#/definitions/api.Metadata"
-                },
                 "name": {
                     "type": "string",
                     "example": "created"
+                },
+                "payload": {
+                    "$ref": "#/definitions/api.Payload"
                 }
             }
         },
