# internal/api/process-controller.go
@@ -171,7 +171,7 @@ func (pc *ProcessController) AssignStatus(c *fiber.Ctx) error {
 	log.Info("get process by uuid: ", uuid)
 	log.Info("move it to: ", status)
 
-	err = pc.service.AssignStatus(c.Context(), code, uuid, status, processStatus.Metadata)
+	err = pc.service.AssignStatus(c.Context(), code, uuid, status, processStatus.Payload)
 	if err != nil {
 		log.Error("cannot move into new status ", err)
 		if errors.Is(err, ErrProcessNotFound) {
