# internal/api/process-model.go
@@ -12,7 +12,7 @@ type (
 	ProcessDTO     struct {
 		UUID          string               `json:"uuid" example:"23c968a6-5fc5-4e42-8f59-a7f9c0d4999c"`
 		Code          string               `json:"code" example:"requests"`
-		Metadata      Metadata             `json:"metadata,omitempty"`
+		Payload       Payload              `json:"payload,omitempty"`
 		CurrentStatus *ProcessStatusDTO    `json:"current_status,omitempty"`
 		Statuses      ProcessStatusListDTO `json:"statuses,omitempty"`
 		CreatedAt     time.Time            `json:"created_at" example:"2023-12-08T11:33:55.418484002-06:00"`
@@ -21,11 +21,11 @@ type (
 
 	ProcessStatusListDTO []ProcessStatusDTO
 
-	Metadata map[string]interface{}
+	Payload map[string]interface{}
 
 	ProcessStatusDTO struct {
 		Name      string    `json:"name,omitempty" example:"created"`
-		Metadata  Metadata  `json:"metadata,omitempty"`
+		Payload   Payload   `json:"payload,omitempty"`
 		CreatedAt time.Time `json:"created_at" example:"2023-12-08T11:33:55.418484002-06:00"`
 	}
 
@@ -50,7 +50,7 @@ func (p *ProcessDTO) toEntity() *Process {
 	return &Process{
 		UUID:          p.UUID,
 		Code:          p.Code,
-		Metadata:      p.Metadata.toBytes(),
+		Metadata:      p.Payload.toBytes(),
 		CurrentStatus: curentStatus,
 		Statuses:      statuses,
 	}
@@ -58,7 +58,7 @@ func (p *ProcessDTO) toEntity() *Process {
 
 func (p *ProcessStatusDTO) toEntity() ProcessStatus {
 	metadata := datatypes.JSON{}
-	metadata.Scan(p.Metadata)
+	metadata.Scan(p.Payload)
 	return ProcessStatus{
 		Name:     p.Name,
 		Metadata: metadata,
@@ -74,7 +74,7 @@ func (pp ProcessStatusListDTO) toEntity() ProcessStatusList {
 	return res
 }
 
-func (m Metadata) toBytes() []byte {
+func (m Payload) toBytes() []byte {
 	bytes, _ := json.Marshal(m)
 	return bytes
 }
